--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+@use "./scss/" as *;
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu:wght@300;400;500;700&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+    font-size: 100%; // 16px
+
+    @include tablet {
+        font-size: 80%; // 12.8px
+    }
+
+    @include mobile {
+        font-size: 60%; // 9.6px
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    font-family: $font-family;
+    font-weight: 400;
+    line-height: 1.5;
+
+    background-color: $body-bg;
+    color: $txt-color;
+
+    // @include mobile {
+    //     margin-bottom: 3rem;
+    // }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+    text-decoration: none;
+    color: unset;
 }
 
-.App-link {
-  color: #61dafb;
+@media (hover: hover) {
+    a:hover {
+        color: $main-color;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button,
+input {
+    outline: 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+img {
+    max-width: 100%;
+}
+
+iframe {
+    border: 0;
+}
+
+.container {
+    max-width: 1660px;
+    margin: auto;
+}
+
+.mb-3 {
+    margin-bottom: 3rem;
+}
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
+.section {
+    padding: 0 2rem;
+}
+
+.section__header {
+    @include flex(center, space-between);
 }
