--- a/src/App.scss
+++ b/src/App.scss
@@ -67,6 +67,11 @@ iframe {
     margin: auto;
 }
 
+.max-center {
+    max-width: 1050px;
+    margin: 0 auto;
+}
+
 .mb-3 {
     margin-bottom: 3rem;
 }
