movie secctions / homepage part2

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,6 +84,6 @@ iframe {
     padding: 0 2rem;
 }
 
-.section__header {
-    @include flex(center, space-between);
-}
+// .section__header {
+//     @include flex(center, space-between);
+// }
