header searchinput and searchbutton is working and scss finished

--- a/src/components/page-header/page-header.scss
+++ b/src/components/page-header/page-header.scss
@@ -17,6 +17,7 @@
     .text {
       font-size: 30rem;
       letter-spacing: 1rem;
+      text-transform: capitalize;
 
       @include tablet {
         font-size: 40rem;
