--- a/src/components/search-button/search-button.scss
+++ b/src/components/search-button/search-button.scss
@@ -5,6 +5,10 @@
   // transition: all .5s ease;
   transition: all 2s ;
 
+  & .input-error {
+    border-color: $second-color;
+  }
+
   &.open {
     max-width: 400px;
     border: 3px solid rgba(255, 255, 255, 0.1);
