--- a/src/App.scss
+++ b/src/App.scss
@@ -80,6 +80,10 @@ iframe {
     margin-bottom: 2rem;
 }
 
+.mt-30 {
+    margin-top: 30rem;
+}
+
 .section {
     padding: 0 2rem;
 }
@@ -92,6 +96,3 @@ iframe {
      padding-top: 150rem;
     }
 }
-// .section__header {
-//     @include flex(center, space-between);
-// }
