categories page scss (highlight is missing)

--- a/src/components/home-hero/home-hero.scss
+++ b/src/components/home-hero/home-hero.scss
@@ -135,7 +135,7 @@
         display: flex;
         padding: 12px 12px;
         gap: 5px;
-        background-color: #333333;
+        background-color: $btn-gray;
         border-radius: 10px;
         color: $white;
         font-size: 14rem;
