--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $body-bg: #03020A;
 $main-color: #E13C2F;
 $second-color: #9D0000;
 $btn-oppacity: #9D0000;
+$btn-gray: #333333;
 $txt-color: #fff;
 
 $white: #fff;
