--- a/src/components/movie-detail/movie-detail.scss
+++ b/src/components/movie-detail/movie-detail.scss
@@ -161,14 +161,25 @@
         padding: 12px 12px;
         gap: 5px;
         background-color: $main-color;
+        border: none;
         border-radius: 10px;
         color: $white;
         font-size: 14rem;
         cursor: pointer;
 
+        &:hover {
+          background-color: $btn-oppacity;
+        }
+
         @include mobile {
           font-size: 30rem;
           padding: 15px 12px;
+        }
+        &__icon {
+          font-size: 15rem;
+          @include mobile {
+            font-size: 35rem;
+          }
         }
       }
 
@@ -217,6 +228,7 @@
         padding: 8px 10px;
         width: 113px;
         background-color: $main-color;
+        border: none;
         border-radius: 11px;
         color: $white;
         cursor: pointer;
