--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@ $main-color: #E13C2F;
 $second-color: #9D0000;
 $btn-oppacity: #9D0000;
 $btn-gray: #333333;
+$btn-oppacity-gray: #1d1c1c;
 $txt-color: #fff;
 
 $white: #fff;
