language config was added and is working in the whole website

--- a/src/components/home-hero/home-hero.scss
+++ b/src/components/home-hero/home-hero.scss
@@ -126,6 +126,7 @@
         border-radius: 8px;
         color: $white;
         font-size: 14rem;
+        text-transform: uppercase;
         cursor: pointer;
 
         &:hover {
@@ -155,6 +156,7 @@
         border-radius: 8px;
         color: $white;
         font-size: 14rem;
+        text-transform: uppercase;
         cursor: pointer;
 
         &:hover {
