--- a/src/components/page-header/page-header.scss
+++ b/src/components/page-header/page-header.scss
@@ -17,7 +17,7 @@
     .text {
       font-size: 30rem;
       letter-spacing: 1rem;
-      text-transform: capitalize;
+      // text-transform: capitalize;
 
       @include tablet {
         font-size: 40rem;
