infinite scroll working

--- a/src/components/movie-grid/movie-grid.scss
+++ b/src/components/movie-grid/movie-grid.scss
@@ -42,9 +42,11 @@
             border: 1px solid rgba(225, 60, 47, 0.5);
             background-color: rgba(225, 60, 47, 0.12);
         }
-
-        @include tablet {
-            display: none;
-        }
     }
+}
+
+.MuiCircularProgress-root.css-189ykzf-MuiCircularProgress-root {
+    display: flex;
+    justify-content: center;
+    margin: 30px auto;
 }
