--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -72,7 +72,7 @@
     li {
       @include flex(center, center);
       height: 100%;
-      padding: 5px 0;
+      padding: 5px 15px;
       font-weight: 300;
       position: relative;
       font-size: 14.5rem;
