--- a/src/components/home-hero/home-hero.scss
+++ b/src/components/home-hero/home-hero.scss
@@ -4,6 +4,13 @@
 
   width: 100%;
   height: 100vh;
+  @include tablet {
+    height: 70vh;
+  }
+  @include mobile {
+    height: 100vh;
+  }
+  
 
   &__item {
 
@@ -30,16 +37,45 @@
         background-position: center;
         box-shadow: 200px -200px 400px -21px rgb(0, 0, 0) inset;
         z-index: -1;
+        @include tablet {
+          position: absolute;
+          display: flex;
+          width: 100%;
+          height: 70vh;
+          top: 0;
+          right: 0;
+          background-size: cover;
+          background-position: center;
+          // box-shadow: inset 0 0 85px 65px black;
+          box-shadow: 1px -91px 41px -19px rgba(0,0,0,0.85) inset;
+          opacity: 0.8;
+          z-index: -1;
+        }
+        @include mobile {
+          box-shadow: 1px -62px 33px -19px rgba(0,0,0,0.8) inset;
+          border-radius: 11%;
+        }
       }
       &__info {
         @include flex(start, end);
         flex-direction: column;
         height: 100vh;
-        padding: 90px 0;
+        // padding: 90px 0;
+        padding-bottom: 90px;
         max-width: 512px;
 
+        @include tablet {
+          // min-width: 258px;
+          /* padding: 85px 0; */
+          padding-bottom: 25%;
+          max-width: 512px;
+          height: 70vh;
+        }
         @include mobile {
           @include flex(center, end);
+          padding-bottom: 90px;
+          height: 100vh;
+
           // min-width: 258px;
         }
 
@@ -53,9 +89,13 @@
       gap: 15px;
       font-size: 20rem;
       margin-bottom: 15px;
+      text-shadow: $txt-shadow;
 
+      @include tablet {
+        font-size: 35rem;
+      }
       @include mobile {
-        font-size: 40rem;
+        font-size: 35rem;
       }
 
       & .data__star {
@@ -73,7 +113,11 @@
         background-color: $main-color;
         font-size: 13rem;
         border-radius: 7px;
-
+        text-shadow: none;
+        @include tablet {
+          font-size: 24rem;
+          box-shadow: $box-shadow;
+        }
         @include mobile {
           padding: 5px 10px;
           font-size: 28rem;
@@ -87,7 +131,10 @@
         font-size: 32rem;
         font-weight: 600;
         margin-bottom: 15px;
-
+        @include tablet {
+          font-size: 46rem;
+          text-shadow: $txt-shadow;
+        }
         @include mobile {
           font-size: 50rem;
           text-align: center;
@@ -103,7 +150,11 @@
         overflow: hidden;
         -webkit-line-clamp: 4;
         -webkit-box-orient: vertical;
-
+        @include tablet {
+          font-size: 28rem;
+          -webkit-line-clamp: 5;
+          text-shadow: $txt-shadow;
+        }
         @include mobile {
           display: none;
         }
@@ -128,11 +179,17 @@
         font-size: 14rem;
         text-transform: uppercase;
         cursor: pointer;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
 
+        // box-shadow: 5px 7px 32px 0px rgba(0,0,0,0.83);
         &:hover {
           background-color: $btn-oppacity;
         }
-
+        @include tablet {
+          font-size: 27rem;
+          padding: 13.5px 13.5px;
+          box-shadow: $box-shadow;
+        }
         @include mobile {
           font-size: 30rem;
           padding: 15px 12px;
@@ -140,6 +197,9 @@
 
         &__icon {
           font-size: 15rem;
+          @include tablet {
+            font-size: 35rem;
+          }
           @include mobile {
             font-size: 35rem;
           }
@@ -162,7 +222,11 @@
         &:hover {
           background-color: $btn-oppacity-gray
         }
-
+        @include tablet {
+          font-size: 27rem;
+          padding: 13.5px 13.5px;
+          box-shadow: $box-shadow;
+        }
         @include mobile {
           font-size: 30rem;
           padding: 13.5px 13.5px;
@@ -170,6 +234,9 @@
 
         &__icon {
           font-size: 15rem;
+          @include tablet {
+            font-size: 34rem;
+          }
           @include mobile {
             font-size: 40rem;
           }
