--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,11 +5,12 @@ $btn-oppacity: #9D0000;
 $btn-gray: #333333;
 $btn-oppacity-gray: #1d1c1c;
 $txt-color: #fff;
+$txt-shadow: 4px 4px 2px rgba(0,0,0,0.6);
 
 $white: #fff;
 $black: #000;
 
-$box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+$box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
 
 // $header-height: 8rem;
 // $header-shrink-height: 5rem;
