--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,9 @@ $white: #fff;
 $black: #000;
 
 $box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
+$box-shadow-container: 200px -200px 400px -21px rgb(0, 0, 0) inset;
+$box-shadow-containerV2: 1px -91px 41px -19px rgba(0,0,0,0.85) inset;
+$box-shadow-containerV3: 1px -62px 33px -19px rgba(0,0,0,0.8) inset;
 
 // $header-height: 8rem;
 // $header-shrink-height: 5rem;
