--- a/src/components/movie-grid/movie-grid.scss
+++ b/src/components/movie-grid/movie-grid.scss
@@ -50,3 +50,11 @@
     justify-content: center;
     margin: 30px auto;
 }
+
+.MuiCircularProgress-root{
+    .MuiCircularProgress-root.MuiCircularProgress-indeterminate {
+        display: flex;
+        justify-content: center;
+        margin: 30px auto;
+    }
+}
